deploy/apps/graphwiki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: graphwiki
  labels:
    istio-injection: enabled
