deploy/apps/graphwiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphwiki
  namespace: graphwiki
spec:
  selector:
    app: graphwiki
  ports:
  - port: 80
    targetPort: 8000
